# First-Django

./: pyproject.toml
mysite/blog/: models.py  views.py
mysite/blog/migrations/: 0001_initial.py
mysite/blog/static/css/: blog.css
mysite/blog/templates/blog/: base.html  post_list.html
mysite/mysite/: settings.py
