[tool.poetry]
name = "django-project"
version = "0.1.0"
description = ""
authors = ["Evgenii <104910481+Varlamms@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "django_project"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
